[metadata]
name = robust-ad
version = 0.0.1
author = George Blanar
author_email = g.blanar82@gmail.com
description = A tool set for anomaly detection in machine learning
long_description = file: README.md
long_description_content_type = text/markdown
url =
project_urls =
    Bug Tracker =
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src